    then exit after executing AUTOEXEC.BAT. (Wengier)
  - Fixed command-line option -socket not working for
    the null-modem feature. (Wengier)
  - Fixed issue that aspect ratio not being respected
    in full-screen mode when a GLSL shader is enabled
    with an OpenGL output. (Wengier)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)
  - Improved Gravis Ultrasound (GUS) implementation to
    make it more accurately represent the GUS DMA state
    as expected by the running DOS software.
  - The archive attribute will no longer automatically
    be applied to directories on non-Windows systems.
    This fixed issue with PLAYMIDI.EXE from Gravis
    Ultrasound when listing directories. (Wengier)
  - Applied hack to allow the low DMA channel detection
    in the SB16 DIAGNOSE program to work. (Wengier)
  - The default setting of the clip_paste_speed option
    has been changed from 20 to 30, which will help
    prevent lost keystrokes when pasting from the host
    clipboard for some programs. (Wengier)
  - With Pentium CPU setting (cputype=pentium) DOSBox-X
    no longer reports FDIV bug by default. An advanced
    config option "report fdiv bug" is added to report
    such CPU bug when set to true. (rderooy & Wengier)
  - Added support for the XDG_DATA_HOME environment
    variable for config directory in Linux. (rderooy)
  - Added support for compiling with pcap for Windows
    MinGW builds. (Jookia)
  - Added config option "windowposition" (in [sdl]
    section) to set the window position at startup in
    the positionX,positionY format. (tomba4)
  - Added config option "raw_mouse_input" (in [sdl]
    section; SDL2 builds only) to bypass the operating
    system's mouse acceleration & sensitivity settings.
    Implemented by NicknineTheEagle.
  - Added config option "startquiet" (in [dos] section)
    which when set to true will silence the information
    messages before launching Windows programs to run