@@ -10864,6 +10864,10 @@ fresh_boot:
              * such as the environment block */
             dos_kernel_disabled = true;
 
+            std::string core(static_cast<Section_prop *>(control->GetSection("cpu"))->Get_string("core"));
+            if (!strcmp(RunningProgram, "LOADLIN") && core == "auto")
+                cpudecoder=&CPU_Core_Normal_Run;
+
             /* new code: fire event */
             if (reboot_machine)
                 DispatchVMEvent(VM_EVENT_DOS_EXIT_REBOOT_KERNEL);
